--- a/index.html
+++ b/index.html
@@ -176,6 +176,32 @@
                 return
             }
 
+            var myHeaders = new Headers();
+            myHeaders.append("Content-Type", "application/json");
+
+            var raw = JSON.stringify({
+            "form_title": "CareerLearns Form",
+            "api_key": "fcb7193509fd413",
+            "name": name,
+            "phone": phone,
+            "email":email,
+            "question":ask
+            });
+
+            var requestOptions = {
+            method: 'POST',
+            headers: myHeaders,
+            body: raw,
+            redirect: 'follow'
+            };
+
+            fetch("https://supersent.in/api/forms/", requestOptions)
+            .then(response => response.text())
+            .then(result => console.log(result))
+            .catch(error => alert("Something Went Wrong Try again Later"));
+
+            // window.location.href='/';
+
         }
       </script>
       
