--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
 
             fetch("https://supersent.in/api/forms/", requestOptions)
             .then(response => response.text())
-            .then(result => console.log(result))
+            .then(result => window.location.href='/')
             .catch(error => alert("Something Went Wrong Try again Later"));
 
-            // window.location.href='/';
+            
 
         }
       </script>
