--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CareerLearns</title>
+    <title>CareerLearns | Don't let your potential go untapped</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="CareerLearns Website" name="keywords">
-    <meta content="CareerLearns Website" name="description">
+    <meta content="careerlearns, career learns, Careerlearns, Careerlearns kerala" name="keywords">
+    <meta content="CareerLearns official Website" name="description">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="CareerLearns">
+    <meta property="og:description" content="Don't let your potential go untapped">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://careerlearns.in">
     <link rel="icon" type="image/x-icon" href="images/social_career_learns_logo.png">
 
     <!-- Favicon -->
