--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             <h1 class="text-white mt-4 mb-4"></h1>
             <h1 class="text-white display-1 mb-5">Don't let your potential go Untapped!</h1>
             <button class="btn btn-secondary" style="width: 180px;margin-top: -25px;" onclick="window.location.href='/#about'">Explore</button>
+            <button class="btn btn-secondary" style="width: 180px;margin-top: -25px;" onclick="window.location.href='/german-classes.html'">German Classes</button>
           
         </div>
     </div>
@@ -599,7 +600,8 @@
             <div class="row">
                 <div class="col-md-4 mb-5">
                     <h3 class="text-white mb-4">Get In Touch</h3>
-                    <p><i class="fa fa-map-marker-alt mr-2"></i>Koothattukulam, Kerala, 686662</p>
+                    <p><i class="fa fa-map-marker-alt mr-2"></i>D1, Centerspace
+                        XIII/284 A, Anjanasree Arcade, Annankunnu Road, Kottayam PIN: 686001</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>+91 8921988362</p>
                     <p><i class="fa fa-envelope mr-2"></i>hello@careerlearns.in</p>
                     <div class="d-flex justify-content-start mt-4">
