--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <h1 class="text-white mt-4 mb-4"></h1>
             <h1 class="text-white display-1 mb-5">Don't let your potential go Untapped!</h1>
             <button class="btn btn-secondary" style="width: 180px;margin-top: -25px;" onclick="window.location.href='/#about'">Explore</button>
-            <button class="btn btn-secondary" style="width: 180px;margin-top: -25px;" onclick="window.location.href='/german-classes.html'">German Classes</button>
+            <button class="btn btn-secondary" style="width: 180px;margin-top: -25px;" onclick="window.location.href='/careerlarns/german-classes.html'">German Classes</button>
           
         </div>
     </div>
