--- a/german-classes.html
+++ b/german-classes.html
@@ -106,7 +106,7 @@
             <h1 class="text-white mt-4 mb-4"></h1>
             <h1 class="text-white display-1 mb-5">Start your career in Germany...</h1>
             <button class="btn btn-secondary" style="width: 180px;margin-top: -25px;" onclick="window.location.href='#about'">Explore</button>
-            <button class="btn btn-secondary" style="width: 180px;margin-top: -25px;" onclick="window.location.href='/index.html#courses'">Coding Classes</button>
+            <button class="btn btn-secondary" style="width: 180px;margin-top: -25px;" onclick="window.location.href='/#courses'">Coding Classes</button>
           
         </div>
     </div>
