--- a/index.html
+++ b/index.html
@@ -600,8 +600,8 @@
             <div class="row">
                 <div class="col-md-4 mb-5">
                     <h3 class="text-white mb-4">Get In Touch</h3>
-                    <p><i class="fa fa-map-marker-alt mr-2"></i>D1, Centerspace
-                        XIII/284 A, Anjanasree Arcade, Annankunnu Road, Kottayam PIN: 686001</p>
+                    <!-- <p><i class="fa fa-map-marker-alt mr-2"></i>D1, Centerspace
+                        XIII/284 A, Anjanasree Arcade, Annankunnu Road, Kottayam PIN: 686001</p> -->
                     <p><i class="fa fa-phone-alt mr-2"></i>+91 8921988362</p>
                     <p><i class="fa fa-envelope mr-2"></i>hello@careerlearns.in</p>
                     <div class="d-flex justify-content-start mt-4">
